--- a/layout/footer.html
+++ b/layout/footer.html
@@ -1,5 +1,3 @@
-<!DOCTYPE html>
-
 <footer>
     <div class="row">
       <section class="col-12 col-sm-6 col-lg">
@@ -87,6 +85,6 @@
   </footer>
   
   <!-- Scripts JS -->
-  
+  <script src="assets/JavaScript/footer.js"></script>
   <script src="assets/JavaScript/menu.js"></script>
   <script src="assets/JavaScript/script.js"></script>
